2006-10-06  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.0.4 release

2006-10-06  Raffaele Sandrini  <rasa@gmx.ch>

	* vapi/glib-2.0.vala, vala/valaflags.vala, vala/valaenum.vala,
	  vala/valadatatype.vala, vala/valaarray.vala, vala/valaclass.vala,
	  vala/valastruct.vala: add get and set value support
	* vala/valacodegenerator.vala: add user (arbitrary) signal support
	* vala/valadatatype.vala, vala/valamemorymanager.vala,
	  vala/valastruct.vala: correctly honor ref types in type arguments
	* ccode/valaccodedeclaration.vala, ccode/valaccodemodifiers.vala:
	  support register local variables
	* ccode/valaccodememberaccess.vala: make one line creation possible
	* vapi/glib-2.0.vala: fix return type of Glib.List.nth_data
	* tests/test-024.vala: add user signal test
	* tests/Makefile.am: update

2006-10-05  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valasemanticanalyzer.vala: complete support for
	  prefix increment and decrement operator

2006-10-05  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: transform compund assignments into
	  simple assignments
	* vala/valabinaryexpression.vala: add default argument to construction
	  method
	* tests/test-021.vala: test string += assignment

2006-10-04  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: correct takes_ownership in arrays
	* vala/valacodegenerator.vala: add limited support for array length
	  fields, store array length from array creation expression, copy array
	  length in array assignments
	* vala/valafield.vala: support NoArrayLength attribute
	* compiler/valacompiler.vala: add NoArrayLength attribute to option
	  arrays

2006-10-04  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala, vala/valasemanticanalyzer.vala: specify
	  array element type as type argument
	* vala/valacodegenerator.vala: create declarations for array length
	  variables, iterate over arrays by index if it has known length