@@ -1,3 +1,7 @@
+2006-10-08  Jürg Billeter  <j@bitron.ch>
+
+	* vala/parser.y: support enum values
+
 2006-10-06  Jürg Billeter  <j@bitron.ch>
 
 	* NEWS: update for 0.0.4 release
